// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useLabelMask returns labelMask and input elements 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="labelmask_1"
  >
    <span
      class=""
    >
      MM/DD/YYYY
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      MM/DD/YYYY
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask returns labelMask and input elements 2`] = `
<DocumentFragment>
  <input
    aria-describedby="labelmask_1"
    inputmode="numeric"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`useLabelMask shows masked value when focused 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="labelmask_2"
  >
    <span
      class="ds-u-visibility--screen-reader"
    >
      MM/DD/YYYY
    </span>
    <span
      aria-hidden="true"
      class=""
    >
      12/DD/YYYY
    </span>
  </div>
</DocumentFragment>
`;

exports[`useLabelMask shows unfilled mask when not focused 1`] = `
<DocumentFragment>
  <div
    class="ds-c-label-mask"
    id="labelmask_4"
  >
    <span
      class=""
    >
      MM/DD/YYYY
    </span>
    <span
      aria-hidden="true"
      class="ds-u-display--none"
    >
      12/25/0001
    </span>
  </div>
</DocumentFragment>
`;
